[EDIT] structure, now much cleaner

--- a/Webpage/login/login.html
+++ b/Webpage/login/login.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Login - Register Template">
     <meta name="author" content="Jonas Pfaff">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="loginRegister.css">
+    <link rel="stylesheet" href="../css/basic.css">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <style>
         body {
@@ -51,7 +51,7 @@
             <a href="#">Forgot your password?</a>
         </div>
         <div class="privacy">
-            <a href="#">Privacy Policy</a>
+            <a href="../legal/privacy_policy.html">Privacy Policy</a>
         </div>
 
         <div class="register">
