--- a/Webpage/legal/privacy_policy.html
+++ b/Webpage/legal/privacy_policy.html
@@ -16,16 +16,9 @@
     <link rel="icon" type="image/png" sizes="96x96" href="/assets/images/favicon-96x96.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/assets/images/favicon-16x16.png">
     -->
-    <link rel="manifest" href="/manifest.json">
-    <link rel="stylesheet" href="../login/loginRegister.css">
-    <meta name="msapplication-TileColor" content="#ffffff">
-    <meta name="msapplication-TileImage" content="/assets/images/ms-icon-144x144.png">
+    <link rel="stylesheet" href="../css/basic.css">
     <meta name="theme-color" content="#ffffff">
     <title>Privacy Policy</title>
-    <link href="/assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="/assets/css/live.min.css" rel="stylesheet">
-
-    <meta name="robots" content="noindex">
 
     <style>
         body {
