--- a/Webpage/Home/index.html
+++ b/Webpage/Home/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-    <title>EMF-Scanner &mdash; Website Template by Colorlib</title>
+    <title>EMF-Scanner</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
@@ -1575,7 +1575,9 @@
                                     <script>
                                         document.write(new Date().getFullYear());
                                     </script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                    <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                    <a href></a>
+                                </p>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
                                 </p>
                             </div>
                         </div>
