--- a/Webpage/Home/single_copy.html
+++ b/Webpage/Home/single_copy.html
@@ -92,52 +92,7 @@
                 </div>
                 <div class="row mb-5">
                     <div class="col-lg-6">
-                        <h1 class="headingText">Privacy Policy of EMF_Scanner</h1>
-                        <p class="textPart">EMF_Scanner operates the www.emf_scanner.com website, which provides the SERVICE.</p>
-                        <p class="textPart">This page is used to inform website visitors regarding our policies with the collection, use, and disclosure of Personal Information if anyone decided to use our Service, the EMF_Scanner website.</p>
-                        <p class="textPart">If you choose to use our Service, then you agree to the collection and use of information in relation with this policy. The Personal Information that we collect are used for providing and improving the Service. We will not use
-                            or share your information with anyone except as described in this Privacy Policy.</p>
-                        <p class="textPart">The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at www.emf_scanner.com, unless otherwise defined in this Privacy Policy. Our Privacy Policy was created with the help
-                            of the <a href="https://www.privacypolicytemplate.net">Privacy Policy Template</a> and the <a href="https://www.privacy-policy-template.com/">Online Privacy Policy Template</a>.</p>
-
-                        <h2 class="headingText">Information Collection and Use</h2>
-                        <p class="textPart">For a better experience while using our Service, we may require you to provide us with certain personally identifiable information, including but not limited to your name, phone number, and postal address. The information that
-                            we collect will be used to contact or identify you.</p>
-                        <h2 class="headingText">Log Data</h2>
-                        <p class="textPart">We want to inform you that whenever you visit our Service, we collect information that your browser sends to us that is called Log Data. This Log Data may include information such as your computer’s Internet Protocol ("IP") address,
-                            browser version, pages of our Service that you visit, the time and date of your visit, the time spent on those pages, and other statistics.
-                        </p>
-                        <h2 class="headingText">Cookies</h2>
-                        <p class="textPart">Cookies are files with small amount of data that is commonly used an anonymous unique identifier. These are sent to your browser from the website that you visit and are stored on your computer’s hard drive.</p>
-                        <p class="textPart">Our website uses these "cookies" to collection information and to improve our Service. You have the option to either accept or refuse these cookies, and know when a cookie is being sent to your computer. If you choose to refuse
-                            our cookies, you may not be able to use some portions of our Service.</p>
-                        <h2 class="headingText">Service Providers</h2>
-                        <p class="textPart">We may employ third-party companies and individuals due to the following reasons:</p>
-                        <ul>
-                            <li class="textPart">To facilitate our Service;</li>
-                            <li class="textPart">To provide the Service on our behalf;</li>
-                            <li class="textPart">To perform Service-related services; or</li>
-                            <li class="textPart">To assist us in analyzing how our Service is used.</li>
-                        </ul>
-                        <p class="textPart">We want to inform our Service users that these third parties have access to your Personal Information. The reason is to perform the tasks assigned to them on our behalf. However, they are obligated not to disclose or use the information
-                            for any other purpose.</p>
-                        <h2 class="headingText">Security</h2>
-                        <p class="textPart">We value your trust in providing us your Personal Information, thus we are striving to use commercially acceptable means of protecting it. But remember that no method of transmission over the internet, or method of electronic storage
-                            is 100% secure and reliable, and we cannot guarantee its absolute security.</p>
-                        <h2 class="headingText">Links to Other Sites</h2>
-                        <p class="textPart">Our Service may contain links to other sites. If you click on a third-party link, you will be directed to that site. Note that these external sites are not operated by us. Therefore, we strongly advise you to review the Privacy
-                            Policy of these websites. We have no control over, and assume no responsibility for the content, privacy policies, or practices of any third-party sites or services.</p>
-                        <p class="textPart">Children’s Privacy</p>
-                        <p class="textPart">Our Services do not address anyone under the age of 13. We do not knowingly collect personal identifiable information from children under 13. In the case we discover that a child under 13 has provided us with personal information,
-                            we immediately delete this from our servers. If you are a parent or guardian and you are aware that your child has provided us with personal information, please contact us so that we will be able to do necessary actions.</p>
-                        <h2 class="headingText">Changes to This Privacy Policy</h2>
-                        <p class="textPart">We may update our Privacy Policy from time to time. Thus, we advise you to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective
-                            immediately, after they are posted on this page.
-                        </p>
-                        <h2 class="headingText">Contact Us</h2>
-                        <p class="textPart">If you have any questions or suggestions about our Privacy Policy, do not hesitate to contact us.
-                        </p>
-                        <!--<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
                         <p>A small river named Duden flows by their place and supplies it with the necessary regelialia. It is a paradisematic country, in which roasted parts of sentences fly into your mouth.</p>
                         <p>The Big Oxmox advised her not to do so, because there were thousands of bad Commas, wild Question Marks and devious Semikoli, but the Little Blind Text didn’t listen. She packed her seven versalia, put her initial into the belt
                             and made herself on the way.</p>
@@ -156,100 +111,100 @@
                         <p><a href="#" class="btn btn-primary py-3 px-4">Contact Us</a></p>
                     </div>
                 </div>
-            </div> -->
+            </div>
+        </div>
+
+        <div class="schedule-wrap2 clearfix">
+            <div class="d-md-flex align-items-center">
+                <div class="hours mr-md-4 mb-4 mb-lg-0">
+                    <strong class="d-block">Hours</strong> Opening: 7:30am &mdash; Closing: 9:00pm
+                </div>
+                <div class="cta ml-auto">
+                    <a href="#" class="d-flex d-md-flex align-items-center btn">
+                        <span class="mx-auto"> <span>Contact us</span> <span class="arrow icon-keyboard_arrow_right"></span></span>
+                    </a>
+                </div>
+            </div>
+        </div>
+
+
+        <footer class="footer-section bg-light">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <h3 class="text-dark">About Stamina</h3>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
                     </div>
 
-                    <div class="schedule-wrap2 clearfix">
-                        <div class="d-md-flex align-items-center">
-                            <div class="hours mr-md-4 mb-4 mb-lg-0">
-                                <strong class="d-block">Hours</strong> Opening: 7:30am &mdash; Closing: 9:00pm
-                            </div>
-                            <div class="cta ml-auto">
-                                <a href="#" class="d-flex d-md-flex align-items-center btn">
-                                    <span class="mx-auto"> <span>Contact us</span> <span class="arrow icon-keyboard_arrow_right"></span></span>
-                                </a>
-                            </div>
-                        </div>
+                    <div class="col-md-3 ml-auto">
+                        <h3 class="text-dark">Links</h3>
+                        <ul class="list-unstyled footer-links">
+                            <li><a href="#">Home</a></li>
+                            <li><a href="#overview-section">Overview</a></li>
+                            <li><a href="#project-section">Our Project</a></li>
+                            <li><a href="#science-section">Science</a></li>
+                            <li><a href="#team-section">Our Team</a></li>
+                            <li><a href="#shop-section">Shop now</a></li>
+                            <li><a href="#contact-section">Contact</a></li>
+                        </ul>
                     </div>
 
-
-                    <footer class="footer-section bg-light">
-                        <div class="container">
-                            <div class="row">
-                                <div class="col-md-4">
-                                    <h3 class="text-dark">About Stamina</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-                                </div>
-
-                                <div class="col-md-3 ml-auto">
-                                    <h3 class="text-dark">Links</h3>
-                                    <ul class="list-unstyled footer-links">
-                                        <li><a href="#">Home</a></li>
-                                        <li><a href="#overview-section">Overview</a></li>
-                                        <li><a href="#project-section">Our Project</a></li>
-                                        <li><a href="#science-section">Science</a></li>
-                                        <li><a href="#team-section">Our Team</a></li>
-                                        <li><a href="#shop-section">Shop now</a></li>
-                                        <li><a href="#contact-section">Contact</a></li>
-                                    </ul>
-                                </div>
-
-                                <div class="col-md-4">
-                                    <h3 class="text-dark">Subscribe</h3>
-                                    <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
-                                    </p>
-                                    <form action="#">
-                                        <div class="d-flex mb-5">
-                                            <input type="text" class="form-control rounded-0" placeholder="Email">
-                                            <input type="submit" class="btn btn-primary rounded-0" value="Subscribe">
-                                        </div>
-                                    </form>
-                                </div>
-
+                    <div class="col-md-4">
+                        <h3 class="text-dark">Subscribe</h3>
+                        <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.
+                        </p>
+                        <form action="#">
+                            <div class="d-flex mb-5">
+                                <input type="text" class="form-control rounded-0" placeholder="Email">
+                                <input type="submit" class="btn btn-primary rounded-0" value="Subscribe">
                             </div>
-
-                            <div class="row pt-5 mt-5 text-center">
-                                <div class="col-md-12">
-                                    <div class=" pt-5">
-                                        <p class="copyright">
-                                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                            Copyright &copy;
-                                            <script>
-                                                document.write(new Date().getFullYear());
-                                            </script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                            <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                        </p>
-                                    </div>
-                                </div>
-
-                            </div>
-                        </div>
-                    </footer>
-
-
+                        </form>
+                    </div>
 
                 </div>
-                <!-- .site-wrap -->
 
-                <script src="js/jquery-3.3.1.min.js"></script>
-                <script src="js/jquery-migrate-3.0.1.min.js"></script>
-                <script src="js/jquery-ui.js"></script>
-                <script src="js/popper.min.js"></script>
-                <script src="js/bootstrap.min.js"></script>
-                <script src="js/owl.carousel.min.js"></script>
-                <script src="js/jquery.stellar.min.js"></script>
-                <script src="js/jquery.countdown.min.js"></script>
-                <script src="js/bootstrap-datepicker.min.js"></script>
-                <script src="js/jquery.easing.1.3.js"></script>
-                <script src="js/aos.js"></script>
-                <script src="js/jquery.fancybox.min.js"></script>
-                <script src="js/jquery.sticky.js"></script>
-                <script src="js/jquery.mb.YTPlayer.min.js"></script>
+                <div class="row pt-5 mt-5 text-center">
+                    <div class="col-md-12">
+                        <div class=" pt-5">
+                            <p class="copyright">
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                                Copyright &copy;
+                                <script>
+                                    document.write(new Date().getFullYear());
+                                </script> All rights reserved | This template is made with <i class="icon-heart text-danger" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
+                            </p>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+        </footer>
+
+
+
+    </div>
+    <!-- .site-wrap -->
+
+    <script src="js/jquery-3.3.1.min.js"></script>
+    <script src="js/jquery-migrate-3.0.1.min.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/popper.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
+    <script src="js/jquery.stellar.min.js"></script>
+    <script src="js/jquery.countdown.min.js"></script>
+    <script src="js/bootstrap-datepicker.min.js"></script>
+    <script src="js/jquery.easing.1.3.js"></script>
+    <script src="js/aos.js"></script>
+    <script src="js/jquery.fancybox.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
+    <script src="js/jquery.mb.YTPlayer.min.js"></script>
 
 
 
 
-                <script src="js/main.js"></script>
+    <script src="js/main.js"></script>
 
 </body>
 
