--- a/Webpage/Home/index.html
+++ b/Webpage/Home/index.html
@@ -1322,7 +1322,7 @@
                     <div class="row align-items-center justify-content-center text-center">
                         <div class="col-md-7">
                             <h2 class="">We care about your health!</h2>
-                            <p class="lead mx-auto desc mb-5">Stay healthy, whereever you are !</p>
+                            <p class="lead mx-auto desc mb-5">Stay healthy, wherever you are !</p>
                             <p><a href="../login/login.html" target="_blank">Get Started</a></p>
                         </div>
                     </div>
