--- a/Webpage/login/login.html
+++ b/Webpage/login/login.html
@@ -52,8 +52,8 @@
                     </div>
 
                     <div class="container-login100-form-btn m-t-20">
-                        <button class="login100-form-btn">
-							Sign in
+                        <button class="login100-form-btn" href=../login.php>
+                            Sign in
 						</button>
                     </div>
 
