[ADD] changed link to login.php

--- a/Webpage/Home/index.html
+++ b/Webpage/Home/index.html
@@ -83,7 +83,7 @@
                         <p class="lead mx-auto desc mb-5">Thats why we created the EMF-Scanner to keep an eye on the invisible things.
                         </p>
                         <p class="text-center">
-                            <a href="../login/login.html" class="btn btn-outline-white py-3 px-5">Get Started</a>
+                            <a href="../login/login.php" class="btn btn-outline-white py-3 px-5">Get Started</a>
                         </p>
                     </div>
                 </div>
