--- a/Webpage/login/login.html
+++ b/Webpage/login/login.html
@@ -52,7 +52,7 @@
                     </div>
 
                     <div class="container-login100-form-btn m-t-20">
-                        <button class="login100-form-btn" href=../login.php>
+                        <button class="login100-form-btn" href=login.php>
                             Sign in
 						</button>
                     </div>
