--- a/Webpage/Home/index.html
+++ b/Webpage/Home/index.html
@@ -52,7 +52,7 @@
                     <div class="ml-auto">
                         <nav class="site-navigation position-relative text-right" role="navigation">
                             <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                                <li><a href="../login/login.html">Login</a></li>
+                                <li><a href="../login/login.php">Login</a></li>
                                 <li><a href="#home-section" class="nav-link">Home</a></li>
                                 <li><a href="#overview-section" class="nav-link">Overview</a></li>
                                 <li><a href="#project-section" class="nav-link">Our Project</a></li>
@@ -351,7 +351,7 @@
                         <div class="col-md-7">
                             <h2 class="">Every Step Counts</h2>
                             <p class="lead mx-auto desc mb-5">Improve your health and measure your environment
-                                <a href="../login/login.html" target="_blank">Get Started</a></p>
+                                <a href="../login/registration.php" target="_blank">Get Started</a></p>
                         </div>
                     </div>
                 </div>
@@ -1323,7 +1323,7 @@
                         <div class="col-md-7">
                             <h2 class="">We care about your health!</h2>
                             <p class="lead mx-auto desc mb-5">Stay healthy, wherever you are !</p>
-                            <p><a href="../login/login.html" target="_blank">Get Started</a></p>
+                            <p><a href="../login/registration.php" target="_blank">Get Started</a></p>
                         </div>
                     </div>
                 </div>
@@ -1543,7 +1543,7 @@
                         <div class="col-md-3 ml-auto">
                             <h3 class="text-dark">Links</h3>
                             <ul class="list-unstyled footer-links">
-                                <li><a href="../login/index.html">Login</a></li>
+                                <li><a href="../login/login.php">Login</a></li>
                                 <li><a href="#">Home</a></li>
                                 <li><a href="#overview-section">Overview</a></li>
                                 <li><a href="#project-section">Our Project</a></li>
