--- a/Webpage/Home/index.html
+++ b/Webpage/Home/index.html
@@ -26,8 +26,6 @@
 
     <link rel="stylesheet" href="css/style.css">
 
-
-
 </head>
 
 <body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
@@ -1471,6 +1469,7 @@
                         <div class="col-md-8  section-heading">
                             <span class="subheading">Get In Touch</span>
                             <h2 class="heading mb-3">Contact Us</h2>
+                            <p>Order here! </p>
                             <p>Please leave any feedback, improvements and thoughts down here. We really appreciate it!
                             </p>
                         </div>
@@ -1517,20 +1516,6 @@
                     </div>
                 </div>
             </div>
-            <!--
-            <div class="schedule-wrap2 clearfix">
-                <div class="d-md-flex align-items-center">
-                    <div class="hours mr-md-4 mb-4 mb-lg-0">
-                        <strong class="d-block">Hours</strong> Opening: 7:30am &mdash; Closing: 9:00pm
-                    </div>
-                    <div class="cta ml-auto">
-                        <a href="#" class="d-flex d-md-flex align-items-center btn">
-                            <span class="mx-auto"> <span>Contact us</span> <span class="arrow icon-keyboard_arrow_right"></span></span>
-                        </a>
-                    </div>
-                </div>
-            </div>
-          -->
 
             <footer class="footer-section">
                 <div class="container">
